--- a/notebooks/useful-blocks.ipynb
+++ b/notebooks/useful-blocks.ipynb
@@ -205,6 +205,42 @@
    "source": [
     "%sql SELECT * FROM pp_data LIMIT 10"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Database Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ads_2024_conn = fynesse.access.create_connection(username, password, url, 'ads_2024')\n",
+    "ads_2024_conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feynesse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install git+https://github.com/Salt2Salt/ab2886_ads_2024.git\n",
+    "import fynesse\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
   }
  ],
  "metadata": {
