--- a/notebooks/useful-blocks.ipynb
+++ b/notebooks/useful-blocks.ipynb
@@ -38,6 +38,7 @@
     "import yaml\n",
     "with open(\"credentials.yaml\") as file:\n",
     "  credentials = yaml.safe_load(file)\n",
+    "\n",
     "username = credentials[\"username\"]\n",
     "password = credentials[\"password\"]\n",
     "url = credentials[\"url\"]\n",
@@ -94,20 +95,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\pymysql\\connections.py\", line 649, in connect\n",
+      "    sock = socket.create_connection(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Python312\\Lib\\socket.py\", line 828, in create_connection\n",
+      "    for res in getaddrinfo(host, port, 0, SOCK_STREAM):\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Program Files\\Python312\\Lib\\socket.py\", line 963, in getaddrinfo\n",
+      "    for res in _socket.getaddrinfo(host, port, family, type, proto, flags):\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "socket.gaierror: [Errno 11001] getaddrinfo failed\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 146, in __init__\n",
+      "    self._dbapi_connection = engine.raw_connection()\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 3302, in raw_connection\n",
+      "    return self.pool.connect()\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 449, in connect\n",
+      "    return _ConnectionFairy._checkout(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 1263, in _checkout\n",
+      "    fairy = _ConnectionRecord.checkout(pool)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 712, in checkout\n",
+      "    rec = pool._do_get()\n",
+      "          ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\impl.py\", line 179, in _do_get\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 146, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\impl.py\", line 177, in _do_get\n",
+      "    return self._create_connection()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 390, in _create_connection\n",
+      "    return _ConnectionRecord(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 674, in __init__\n",
+      "    self.__connect()\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 900, in __connect\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 146, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 896, in __connect\n",
+      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
+      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\create.py\", line 643, in connect\n",
+      "    return dialect.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\default.py\", line 621, in connect\n",
+      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\pymysql\\connections.py\", line 361, in __init__\n",
+      "    self.connect()\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\pymysql\\connections.py\", line 716, in connect\n",
+      "    raise exc\n",
+      "pymysql.err.OperationalError: (2003, \"Can't connect to MySQL server on '$url' ([Errno 11001] getaddrinfo failed)\")\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sql\\magic.py\", line 196, in execute\n",
+      "    conn = sql.connection.Connection.set(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sql\\connection.py\", line 70, in set\n",
+      "    cls.current = existing or Connection(descriptor, connect_args, creator)\n",
+      "                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sql\\connection.py\", line 55, in __init__\n",
+      "    self.internal_connection = engine.connect()\n",
+      "                               ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 3278, in connect\n",
+      "    return self._connection_cls(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 148, in __init__\n",
+      "    Connection._handle_dbapi_exception_noconnection(\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 2442, in _handle_dbapi_exception_noconnection\n",
+      "    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 146, in __init__\n",
+      "    self._dbapi_connection = engine.raw_connection()\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\base.py\", line 3302, in raw_connection\n",
+      "    return self.pool.connect()\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 449, in connect\n",
+      "    return _ConnectionFairy._checkout(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 1263, in _checkout\n",
+      "    fairy = _ConnectionRecord.checkout(pool)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 712, in checkout\n",
+      "    rec = pool._do_get()\n",
+      "          ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\impl.py\", line 179, in _do_get\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 146, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\impl.py\", line 177, in _do_get\n",
+      "    return self._create_connection()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 390, in _create_connection\n",
+      "    return _ConnectionRecord(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 674, in __init__\n",
+      "    self.__connect()\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 900, in __connect\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 146, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\pool\\base.py\", line 896, in __connect\n",
+      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
+      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\create.py\", line 643, in connect\n",
+      "    return dialect.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sqlalchemy\\engine\\default.py\", line 621, in connect\n",
+      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\pymysql\\connections.py\", line 361, in __init__\n",
+      "    self.connect()\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\pymysql\\connections.py\", line 716, in connect\n",
+      "    raise exc\n",
+      "sqlalchemy.exc.OperationalError: (pymysql.err.OperationalError) (2003, \"Can't connect to MySQL server on '$url' ([Errno 11001] getaddrinfo failed)\")\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "\n",
+      "Connection info needed in SQLAlchemy format, example:\n",
+      "               postgresql://username:password@hostname/dbname\n",
+      "               or an existing connection: dict_keys([])\n"
      ]
     }
    ],
    "source": [
+    "import pymysql\n",
     "%load_ext sql\n",
+    "%config SqlMagic.style = '_DEPRECATED_DEFAULT'\n",
     "%sql mariadb+pymysql://$username:$password@$url/ads_2024?local_infile=1"
    ]
   },
@@ -236,6 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip uninstall --yes fynesse\n",
     "%pip install git+https://github.com/Salt2Salt/ab2886_ads_2024.git\n",
     "import fynesse\n",
     "%load_ext autoreload\n",
