--- a/notebooks/useful-blocks.ipynb
+++ b/notebooks/useful-blocks.ipynb
@@ -53,49 +53,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pymysql in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (1.1.1)\n",
-      "Requirement already satisfied: ipython-sql in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (0.5.0)\n",
-      "Requirement already satisfied: prettytable in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (3.12.0)\n",
-      "Requirement already satisfied: ipython in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (8.21.0)\n",
-      "Requirement already satisfied: sqlalchemy>=2.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (2.0.36)\n",
-      "Requirement already satisfied: sqlparse in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (0.5.1)\n",
-      "Requirement already satisfied: six in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (1.16.0)\n",
-      "Requirement already satisfied: ipython-genutils in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from sqlalchemy>=2.0->ipython-sql) (4.12.2)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from sqlalchemy>=2.0->ipython-sql) (3.1.1)\n",
-      "Requirement already satisfied: decorator in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (0.19.1)\n",
-      "Requirement already satisfied: matplotlib-inline in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (0.1.6)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (3.0.43)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (2.17.2)\n",
-      "Requirement already satisfied: stack-data in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (0.6.3)\n",
-      "Requirement already satisfied: traitlets>=5 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (5.14.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from ipython->ipython-sql) (0.4.6)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from prettytable->ipython-sql) (0.2.13)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from jedi>=0.16->ipython->ipython-sql) (0.8.3)\n",
-      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython->ipython-sql) (2.0.1)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython->ipython-sql) (2.4.1)\n",
-      "Requirement already satisfied: pure-eval in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
    "source": [
-    "%pip install pymysql ipython-sql"
+    "To use these, you need to have the `ipython-sql` package installed. `%pip install ipython-sql`\n",
+    "However, to actually use it, you only need to do `%load_ext sql`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +203,6 @@
     }
    ],
    "source": [
-    "import pymysql\n",
     "%load_ext sql\n",
     "%config SqlMagic.style = '_DEPRECATED_DEFAULT'\n",
     "%sql mariadb+pymysql://$username:$password@$url/ads_2024?local_infile=1"
@@ -244,9 +210,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sql\\magic.py\", line 196, in execute\n",
+      "    conn = sql.connection.Connection.set(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\sql\\connection.py\", line 82, in set\n",
+      "    raise ConnectionError(\n",
+      "sql.connection.ConnectionError: Environment variable $DATABASE_URL not set, and no connect string given.\n",
+      "\n",
+      "Connection info needed in SQLAlchemy format, example:\n",
+      "               postgresql://username:password@hostname/dbname\n",
+      "               or an existing connection: dict_keys([])\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "SET SQL_MODE = \"NO_AUTO_VALUE_ON_ZERO\";\n",
@@ -345,11 +329,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this, you need the `pymysql` package installed and imported."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pymysql\n",
     "ads_2024_conn = fynesse.access.create_connection(username, password, url, 'ads_2024')\n",
     "ads_2024_conn.close()"
    ]
