Performed full join successfully, completed practical 1

--- a/notebooks/useful-blocks.ipynb
+++ b/notebooks/useful-blocks.ipynb
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
-    "with open(\"credentials.yaml\") as file:\n",
+    "with open(\"../credentials.yaml\") as file:\n",
     "  credentials = yaml.safe_load(file)\n",
     "\n",
     "username = credentials[\"username\"]\n",
@@ -325,6 +325,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Feynesse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip uninstall --yes fynesse\n",
+    "%pip install git+https://github.com/Salt2Salt/ab2886_ads_2024.git\n",
+    "import fynesse\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python Database Connection"
    ]
   },
@@ -342,15 +362,15 @@
    "outputs": [],
    "source": [
     "import pymysql\n",
-    "ads_2024_conn = fynesse.access.create_connection(username, password, url, 'ads_2024')\n",
-    "ads_2024_conn.close()"
+    "conn = fynesse.access.create_connection(username, password, url, 'ads_2024')\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feynesse"
+    "### Joins"
    ]
   },
   {
@@ -359,11 +379,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip uninstall --yes fynesse\n",
-    "%pip install git+https://github.com/Salt2Salt/ab2886_ads_2024.git\n",
-    "import fynesse\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from datetime import datetime\n",
+    "import csv\n",
+    "def download_join(conn, year, month):\n",
+    "  for day_start, day_end in [(1,5),(6,10),(11,15),(16,20),(21,25),(26,31)]:\n",
+    "    start_date = f\"{year}-{month:0>2}-{day_start:0>2}\"\n",
+    "    end_date = f\"{year}-{month:0>2}-{day_end:0>2}\"\n",
+    "    cur = conn.cursor()\n",
+    "    sql = f'SELECT pp.price, pp.date_of_transfer, po.postcode, pp.property_type, pp.new_build_flag, pp.tenure_type, pp.locality, pp.town_city, pp.district, pp.county, po.country, po.latitude, po.longitude FROM (SELECT price, date_of_transfer, postcode, property_type, new_build_flag, tenure_type, locality, town_city, district, county FROM pp_data WHERE date_of_transfer BETWEEN \"' + start_date + '\" AND \"' + end_date + '\") AS pp INNER JOIN postcode_data AS po ON pp.postcode = po.postcode'\n",
+    "    cur.execute(sql)\n",
+    "    rows = cur.fetchall()\n",
+    "    csv_file_path = f'prices_coordinates_{start_date}.csv'  \n",
+    "    # Write the rows to the CSV file\n",
+    "    with open(csv_file_path, 'w', newline='') as csvfile:\n",
+    "      csv_writer = csv.writer(csvfile)\n",
+    "      # Write the data rows\n",
+    "      csv_writer.writerows(rows)\n",
+    "      \n",
+    "      print(f'Selecting data for {year}/{month:0>2} | ({start_date}---{end_date}) | {datetime.now().strftime(\"%H:%M:%S\")}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(2002, 2010):\n",
+    "  for month in range(1, 13):\n",
+    "    download_join(conn, year, month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_join_data(conn, csv_file_path):\n",
+    "  cur = conn.cursor()\n",
+    "  cur.execute(f\"LOAD DATA LOCAL INFILE '\" + csv_file_path + \"' INTO TABLE `prices_coordinates_data` FIELDS TERMINATED BY ',' OPTIONALLY ENCLOSED by '\\\"' LINES STARTING BY '' TERMINATED BY '\\n';\")\n",
+    "  conn.commit()\n",
+    "  print(f'Uploaded data for {csv_file_path} | {datetime.now().strftime(\"%H:%M:%S\")}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in os.listdir()[100:]:\n",
+    "  upload_join_data(conn, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Database schema metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "# WARNING: If you run this command after you have uploaded data to the table (in the steps below), you will delete the uploaded data as this command first drops the table if exists (DROP TABLE IF EXISTS `pp_data`;).\n",
+    "# --\n",
+    "# -- Table structure for table `pp_data`\n",
+    "# -- \n",
+    "\n",
+    "USE `ads_2024`;\n",
+    "DROP TABLE IF EXISTS `pp_data`;\n",
+    "CREATE TABLE IF NOT EXISTS `pp_data` (\n",
+    "  `transaction_unique_identifier` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `price` int(10) unsigned NOT NULL,\n",
+    "  `date_of_transfer` date NOT NULL,\n",
+    "  `postcode` varchar(8) COLLATE utf8_bin NOT NULL,\n",
+    "  `property_type` varchar(1) COLLATE utf8_bin NOT NULL,\n",
+    "  `new_build_flag` varchar(1) COLLATE utf8_bin NOT NULL,\n",
+    "  `tenure_type` varchar(1) COLLATE utf8_bin NOT NULL,\n",
+    "  `primary_addressable_object_name` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `secondary_addressable_object_name` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `street` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `locality` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `town_city` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `district` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `county` tinytext COLLATE utf8_bin NOT NULL,\n",
+    "  `ppd_category_type` varchar(2) COLLATE utf8_bin NOT NULL,\n",
+    "  `record_status` varchar(2) COLLATE utf8_bin NOT NULL,\n",
+    "  `db_id` bigint(20) unsigned NOT NULL\n",
+    ") DEFAULT CHARSET=utf8 COLLATE=utf8_bin AUTO_INCREMENT=1 ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "--\n",
+    "-- Primary key for table `pp_data`\n",
+    "--\n",
+    "ALTER TABLE `pp_data`\n",
+    "ADD PRIMARY KEY (`db_id`);\n",
+    "\n",
+    "ALTER TABLE `pp_data`\n",
+    "MODIFY db_id bigint(20) unsigned NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql LOAD DATA LOCAL INFILE \"./pp-1995-part2.csv\" INTO TABLE `pp_data` FIELDS TERMINATED BY ',' OPTIONALLY ENCLOSED by '\"' LINES STARTING BY '' TERMINATED BY '\\n';\n",
+    "%sql CREATE INDEX idx_postcode_data_postcode ON postcode_data(postcode);"
    ]
   }
  ],
